@@ -77,14 +77,18 @@ while ( $row = mysql_fetch_array( $result ) )
       'IMAGE'                   => $thumbnail_src,
       'IMAGE_ALT'               => $row['file'],
       'IMAGE_TITLE'             => $lang['hint_category'],
-      'IMAGE_NAME'              => '['.$name.']',
-      'IMAGE_STYLE'             => 'thumb_category',
         
       'U_IMG_LINK'              => add_session_id($url_link)
       )
     );
-  $template->assign_block_vars('thumbnails.line.thumbnail.bullet',array());
 
+  $template->assign_block_vars(
+    'thumbnails.line.thumbnail.category_name',
+    array(
+      'NAME' => $name
+      )
+    );
+  
   // create a new line ?
   if (++$row_number == $user['nb_image_line'])
   {
